--- a/03-condition.yml
+++ b/03-condition.yml
@@ -1,11 +1,17 @@
 - name: Demo on Condition
   hosts: all
   connection: local
+  vars:
+    fruit: true
+    vegetable: false
+
   tasks:
     - name: Print Fruit Name
       ansible.builtin.debug:
         msg: Fruit Name - apple
+      when: fruit is true
 
     - name: Print Vegetable Name
       ansible.builtin.debug:
         msg: Vegetable Name - carrot
+      when: vegetable is true
