--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,9 +1,14 @@
 - name: Variable
   hosts: WEB
   vars:
-    URL: google.com
+    URL: play.google.com
   tasks:
     - name: print variable
       ansible.builtin.debug:
         msg: URL = {{ URL }}
     ## Ansible Access Variable with 2 flower brackets
+    - name: Print task Variable
+      ansible.builtin.debug:
+        msg: URL = {{ URL }}
+      vars:
+        URL: task.google.com
